[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -90.0
margin_right = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 160.0
margin_bottom = 22.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Start"
align = 0

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 160.0
margin_bottom = 48.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Options"
align = 0

[node name="Tutorial" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 160.0
margin_bottom = 74.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Tutorial"
align = 0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
